# Giphy-CLI-Tool

./: .#gif.py  .flake8  README.md  api.py  check.sh  cli.py  click_test.py  data.py  gif.py  pyproject.toml  setup.cfg  unit_test.py
giphy_cli_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
giphy_tool_project2/: api.py  cli.py  click_test.py  unit_test.py
src/: api.py  cli.py  click_test.py  unit_test.py
src/analysis/: reformat.sh
