[tool.poetry]
name = "giphy-tool-project2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
isort = "^5.13.2"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giphy_cli_tool"
version = "0.1.0"
readme = "README.md"
dependencies = [
	"requests >= 2.31.0",
	"click >= 8.1.7",
]

[project.scripts]
gif = "giphy_tool_project2.cli"
