[tool.poetry]
name = "giphy_cli_tool"
version = "0.0.2"
description = ""
authors = ["4rldur0 <nkim@unca.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
isort = "^5.13.2"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
